--- a/fullstack-civic-tech-main/package.json
+++ b/fullstack-civic-tech-main/package.json
@@ -32,15 +32,19 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "knex": "^2.4.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
